--- a/src/Ryujinx.Ava/Assets/Locales/en_US.json
+++ b/src/Ryujinx.Ava/Assets/Locales/en_US.json
@@ -54,8 +54,8 @@
   "GameListContextMenuManageTitleUpdatesToolTip": "Opens the Title Update management window",
   "GameListContextMenuManageDlc": "Manage DLC",
   "GameListContextMenuManageDlcToolTip": "Opens the DLC management window",
-  "GameListContextMenuOpenModsDirectory": "Open Mods Directory",
-  "GameListContextMenuOpenModsDirectoryToolTip": "Opens the directory which contains Application's Mods",
+  "GameListContextMenuManageMod" : "Manage Mods",
+  "GameListContextMenuManageModToolTip" : "Opens the mod management window",
   "GameListContextMenuCacheManagement": "Cache Management",
   "GameListContextMenuCacheManagementPurgePptc": "Queue PPTC Rebuild",
   "GameListContextMenuCacheManagementPurgePptcToolTip": "Trigger PPTC to rebuild at boot time on the next game launch",
@@ -432,7 +432,6 @@
   "DlcManagerEnableAllButton": "Enable All",
   "DlcManagerDisableAllButton": "Disable All",
   "MenuBarOptionsChangeLanguage": "Change Language",
-  "MenuBarShowFileTypes": "Show File Types",
   "CommonSort": "Sort",
   "CommonShowNames": "Show Names",
   "CommonFavorite": "Favorite",
@@ -516,8 +515,6 @@
   "SettingsTabCpuMemory": "CPU Mode",
   "DialogUpdaterFlatpakNotSupportedMessage": "Please update Ryujinx via FlatHub.",
   "UpdaterDisabledWarningTitle": "Updater Disabled!",
-  "GameListContextMenuOpenSdModsDirectory": "Open Atmosphere Mods Directory",
-  "GameListContextMenuOpenSdModsDirectoryToolTip": "Opens the alternative SD card Atmosphere directory which contains Application's Mods. Useful for mods that are packaged for real hardware.",
   "ControllerSettingsRotate90": "Rotate 90° Clockwise",
   "IconSize": "Icon Size",
   "IconSizeTooltip": "Change the size of game icons",
@@ -587,10 +584,11 @@
   "SelectUpdateDialogTitle": "Select update files",
   "UserProfileWindowTitle": "User Profiles Manager",
   "CheatWindowTitle": "Cheats Manager",
-  "DlcWindowTitle": "Manage Downloadable Content for {0} ({1})",
+  "DlcWindowTitle": "Downloadable Content Manager",
+  "ModWindowTitle" : "Mod Manager",
   "UpdateWindowTitle": "Title Update Manager",
   "CheatWindowHeading": "Cheats Available for {0} [{1}]",
-  "DlcWindowHeading": "{0} Downloadable Content(s)",
+  "DlcWindowHeading": "{0} Downloadable Content(s) available for {1} ({2})",
   "UserProfilesEditProfile": "Edit Selected",
   "Cancel": "Cancel",
   "Save": "Save",
@@ -630,19 +628,6 @@
   "Recover": "Recover",
   "UserProfilesRecoverHeading" : "Saves were found for the following accounts",
   "UserProfilesRecoverEmptyList": "No profiles to recover",
-  "GraphicsAATooltip": "Applies anti-aliasing to the game render",
-  "GraphicsAALabel": "Anti-Aliasing:",
-  "GraphicsScalingFilterLabel": "Scaling Filter:",
-  "GraphicsScalingFilterTooltip": "Enables Framebuffer Scaling",
-  "GraphicsScalingFilterLevelLabel": "Level",
-  "GraphicsScalingFilterLevelTooltip": "Set Scaling Filter Level",
-  "SmaaLow": "SMAA Low",
-  "SmaaMedium": "SMAA Medium",
-  "SmaaHigh": "SMAA High",
-  "SmaaUltra": "SMAA Ultra",
   "UserEditorTitle" : "Edit User",
-  "UserEditorTitleCreate" : "Create User",
-  "SettingsTabNetworkInterface": "Network Interface:",
-  "NetworkInterfaceTooltip": "The network interface used for LAN features",
-  "NetworkInterfaceDefault": "Default"
+  "UserEditorTitleCreate" : "Create User"
 }
